Fix T47337: BVHTree.find_nearest missing

Method wasn't named as documented.